samples/_failures_safe/1761522709_183cb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eee4cdff.c: In function ‘main’:
./samples/SAFE/__tmp_eee4cdff.c:145:5: error: expected declaration or statement at end of input
  145 |     unsigned char decompressed[MAX_INPUT_SIZE];
      |     ^~~~~~~~
